# cpp-traffic-simulator

./: CMakeLists.txt  README.md
src/: Graphics.cpp  Intersection.cpp  Intersection.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  Vehicle.cpp  main.cpp
